# OpenRecall

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  uvloop-0.20.0-cp312-cp312-macosx_10_9_x86_64.whl
data/: data.parquet
openrecall/: main.py  style.css  style.qss
openrecall/config/: config.json  config_loader.py
openrecall/description/: description.py
openrecall/pages/: credits.py  quick_start.py  settings.py
openrecall/screenshot/: capture_screenshot.py
openrecall/vectordb/: vector_db.py
scripts/: capture_screenshot.py  description.py  requirements.txt  testing_screenshot.py  vector_db.py
