[tool.poetry]
name = "OpenRecall"
version = "0.1.0"
description = "An open source implementation of the Microsoft recall function running entirely locally"
authors = ["vinisvictorelli <vini.svictorelli@gmail.com>"]
license = "GPLv3"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<4"
aiofiles = "==23.2.1"
annotated-types = "==0.7.0"
anyio = "==4.6.0"
asgiref = "==3.8.1"
backoff = "==2.2.1"
bcrypt = "==4.2.0"
build = "==1.2.2"
cachetools = "==5.5.0"
certifi = "==2024.8.30"
charset-normalizer = "==3.3.2"
chroma-hnswlib = "==0.7.6"
chromadb = "==0.5.11"
click = "==8.1.7"
coloredlogs = "==15.0.1"
contourpy = "==1.3.0"
cycler = "==0.12.1"
deprecated = "==1.2.14"
durationpy = "==0.7"
easyprocess = "==1.1"
entrypoint2 = "==1.1"
fastapi = "==0.115.0"
ffmpy = "==0.4.0"
filelock = "==3.16.1"
flatbuffers = "==24.3.25"
fonttools = "==4.54.1"
fsspec = "==2024.9.0"
google-auth = "==2.35.0"
googleapis-common-protos = "==1.65.0"
gradio = "==4.44.0"
gradio-client = "==1.3.0"
grpcio = "==1.66.2"
h11 = "==0.14.0"
httpcore = "==1.0.5"
httpx = "==0.27.2"
httptools = "==0.6.1"
huggingface-hub = "==0.25.1"
humanfriendly = "==10.0"
idna = "==3.10"
importlib-metadata = "==8.4.0"
importlib-resources = "==6.4.5"
jinja2 = "==3.1.4"
kiwisolver = "==1.4.7"
kubernetes = "==31.0.0"
markdown-it-py = "==3.0.0"
markupsafe = "==2.1.5"
matplotlib = "==3.9.2"
mdurl = "==0.1.2"
mmh3 = "==5.0.1"
monotonic = "==1.6"
mpmath = "==1.3.0"
mss = "==9.0.2"
numpy = "==2.1.1"
oauthlib = "==3.2.2"
ollama = "==0.3.3"
onnxruntime = "==1.19.2"
opencv-python = "==4.10.0.84"
opentelemetry-api = "==1.27.0"
opentelemetry-exporter-otlp-proto-common = "==1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "==1.27.0"
opentelemetry-instrumentation = "==0.48b0"
opentelemetry-instrumentation-asgi = "==0.48b0"
opentelemetry-instrumentation-fastapi = "==0.48b0"
opentelemetry-proto = "==1.27.0"
opentelemetry-sdk = "==1.27.0"
opentelemetry-semantic-conventions = "==0.48b0"
opentelemetry-util-http = "==0.48b0"
orjson = "==3.10.7"
overrides = "==7.7.0"
packaging = "==24.1"
pandas = "==2.2.3"
pillow = "==10.4.0"
posthog = "==3.6.6"
protobuf = "==4.25.5"
pyasn1 = "==0.6.1"
pyasn1-modules = "==0.4.1"
pydantic = "==2.9.2"
pydantic-core = "==2.23.4"
pydub = "==0.25.1"
pygments = "==2.18.0"
pyparsing = "==3.1.4"
pypika = "==0.48.9"
pyproject-hooks = "==1.1.0"
pyscreenshot = "==3.1"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.0.1"
python-multipart = "==0.0.11"
pytz = "==2024.2"
pyyaml = "==6.0.2"
requests = "==2.32.3"
requests-oauthlib = "==2.0.0"
rich = "==13.8.1"
rsa = "==4.9"
ruff = "==0.6.8"
semantic-version = "==2.10.0"
setuptools = "==75.1.0"
shellingham = "==1.5.4"
six = "==1.16.0"
sniffio = "==1.3.1"
starlette = "==0.38.6"
streamlit = "==1.41.1"
sympy = "==1.13.3"
tenacity = "==9.0.0"
tokenizers = "==0.20.0"
tomlkit = "==0.12.0"
tqdm = "==4.66.5"
typer = "==0.12.5"
typing-extensions = "==4.12.2"
tzdata = "==2024.2"
urllib3 = "==2.2.3"
uvicorn = "==0.31.0"
watchfiles = "==0.24.0"
websocket-client = "==1.8.0"
websockets = "==12.0"
wrapt = "==1.16.0"
xlib = "==0.21"
zipp = "==3.20.2"
altair = "==5.5.0"
attrs = "==24.3.0"
blinker = "==1.9.0"
distlib = "==0.3.9"
docutils = "==0.21.2"
exceptiongroup = "==1.2.2"
filetype = "==1.2.0"
gitdb = "==4.0.12"
gitpython = "==3.1.44"
jeepney = "==0.8.0"
jsonschema = "==4.23.0"
jsonschema-specifications = "==2024.10.1"
kivy = "==2.3.1"
kivy-examples = "==2.3.1"
kivy-garden = "==0.1.5"
narwhals = "==1.22.0"
platformdirs = "==4.3.6"
pyarrow = "==18.1.0"
pydeck = "==0.9.1"
PyQt5 = "==5.15.11"
pyqt5-qt5 = "==5.15.16"
pyqt5-sip = "==12.16.1"
pysimplegui = "==5.0.8"
referencing = "==0.35.1"
rpds-py = "==0.22.3"
smmap = "==5.0.2"
toml = "==0.10.2"
tomli = "==2.2.1"
tornado = "==6.4.2"
uvloop = "==0.20.0"
virtualenv = "==20.29.0"
watchdog = "==6.0.0"
pytesseract = "^0.3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
